@@ -626,6 +626,17 @@
 			<textureradionofocus>buttons/radio/options-radio-button-nf.png</textureradionofocus>
 			<radioposx>-19</radioposx>
 		</control>
+		<!-- Show in-progress indicators -->
+		<control type="radiobutton" id="155">
+			<include>ViewOptions.Button</include>
+			<label>42434</label>
+			<texturefocus>dialogs/options/buttons/default-fo.png</texturefocus>
+			<selected>!Skin.HasSetting(HideProgressOverlay)</selected>
+            <onclick>Skin.ToggleSetting(HideProgressOverlay)</onclick>
+			<textureradiofocus>buttons/radio/options-radio-button-fo.png</textureradiofocus>
+			<textureradionofocus>buttons/radio/options-radio-button-nf.png</textureradionofocus>
+			<radioposx>-19</radioposx>
+		</control>
     </include>
     
     
