@@ -270,5 +270,14 @@
     			<scroll>false</scroll>
     		</control>
     	</control>
+    	<control type="label" id="24">
+			<description>buffering label</description>
+			<posx>0</posx>
+			<posy>-200</posy>
+			<width>1920</width>
+			<label>$LOCALIZE[15107] $INFO[Player.CacheLevel]%</label>
+			<align>center</align>
+			<font>Font-Condensed-S40-B</font>
+		</control>
     </controls>
 </window>
